atomiq-derive/tests/fail_derive_enum_no_repr.stderr
error: Atomizable can only be derived for enums with an explicit repr attribute.
 --> tests/fail_derive_enum_no_repr.rs:3:10
  |
3 | #[derive(Atomizable)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Atomizable` (in Nightly builds, run with -Z macro-backtrace for more info)
